fix dropdown and collapsible plugin issues

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -17,6 +17,14 @@
 $roboto-font-path: "~materialize-sass-origin/font/roboto/";
 $icons-font-path: "https://fonts.googleapis.com/icon?family=Material+Icons";
 
+$h1-fontsize: 42px !default;
+$h2-fontsize: 36px !default;
+$h3-fontsize: 24px !default;
+$h4-fontsize: 20px !default;
+$h5-fontsize: 18px !default;
+$link-color: #1abc9c !default;
+
+
 // Mixins
 @import "~materialize-sass-origin/sass/components/prefixer";
 @import "~materialize-sass-origin/sass/components/mixins";
@@ -28,7 +36,7 @@ $icons-font-path: "https://fonts.googleapis.com/icon?family=Material+Icons";
 // Reset
 @import "~materialize-sass-origin/sass/components/normalize";
 
-// ~materialize-sass-origin/sass/components
+// Components
 @import "~materialize-sass-origin/sass/components/global";
 @import "~materialize-sass-origin/sass/components/grid";
 @import "~materialize-sass-origin/sass/components/navbar";
@@ -54,21 +62,38 @@ $icons-font-path: "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "~materialize-sass-origin/sass/components/date_picker/_default.date.scss";
 @import "~materialize-sass-origin/sass/components/date_picker/_default.time.scss";
 
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
+   font-family: 'Montserrat', sans-serif;
+   font-weight: 400;
+   font-size: 12px;
+   -webkit-font-smoothing: antialiased;
+   -webkit-overflow-scrolling: touch;
  }
 
- main {
-   flex: 1 0 auto;
- }
+main {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 
- .full-width {
-   width: 100%;
- }
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: stretch;
+}
 
- .input-field .prefix {
-   top: 0.5rem;
- }
+footer.page-footer {
+  margin-top: 0;
+  background-color: #212121;
+}
+
+.full-width {
+ width: 100%;
+}
+
+.prefix.valign {
+ top: 8px;
+}
